<resources>
    <string name="app_name">Movies of the Year</string>
    <string name="action_settings">Settings</string>
    <string name="api_language">en-US</string>
    <string name="no_movies_found">No movies found</string>

    <string name="title_favorites_movies">My Favorite Movies</string>
    <string name="title_now_playing_movies">Now Playing Movies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_categories">Main Categories</string>
    <string name="action_to_undone">UNDONE</string>
    <string name="action_undoned">Undone!</string>
    <string name="action_saved_on_favorites">Saved on favorites!</string>
    <string name="movie_already_added_to_favorites">Remove it from yours favorites?</string>
    <string name="watch_trailer">WATCH TRAILER</string>
    <string name="others_trailers">Others trailers</string>
    <string name="should_install_youtube_app">Should you have YouTube app installed in your device to watch trailer.</string>
    <string name="main_actors_title">Main actors</string>
    <string name="action_remove">Remove</string>
    <string name="action_removed">Removed!</string>
    <string name="no_trailer_associated">There is no trailer for it\'s movie.</string>
    <string name="marketing_campaign">Trailers and lots of entertainment!</string>
    <string name="help_first_access">First time here?</string>
    <string name="help_first_access_subtitle">+ Click to see more details\n+ Move right to watch trailer</string>
    <string name="help_favorites_subtitle">+ Move right to watch trailer\n+ Move left to remove</string>
    <string name="help_add_fav_movies">Try add the movies you like to favorites!</string>
    <string name="title_popular_movies">Popular Movies</string>
    <string name="title_upcoming_movies">Movies Coming Soon</string>
    <string name="device_no_internet">You have no internet connection!</string>
    <string name="tmdb_credits_text">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="title_credits">Credits</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="helper_enabled">Interactive Helper enabled</string>
    <string name="user_general_error">Fuuu, an error occurs, don´t give up and try again please</string>
    <string name="marvel_universe_title">Marvel Universe</string>
    <string name="dc_universe_title">DC Universe</string>
    <string name="special_lists">Special Lists</string>
    <string name="top_grossing_movies_title">Top 50 Grossing Movies</string>
    <string name="peter_jackson_movies_title">Peter Jackson Movies</string>
</resources>
